# solitaire

./: CLAUDE.md  README.md  hello.py  pyproject.toml
py/: .gitignore  agent_greedy_heuristic.md  agent_greedy_heuristic.py  agent_lookahead.py  agent_montecarlo.md  agent_montecarlo.py  agent_score_based.py  klondike.py  pyproject.toml  test_klondike.py
rs/: Cargo.toml
rs/src/: card.rs  klondike.rs  main.rs  stack.rs
